<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" tools:context="com.fourreau.systemdroidmonitor.ui.fragment.DisplayFragment">

    <ScrollView
        android:id="@+id/scrollView"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent">

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="2dp">

                <LinearLayout
                    android:orientation="vertical"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@android:drawable/dialog_holo_light_frame"
                    android:padding="15dp" >

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textStyle="bold"
                        android:text="@string/display"/>

                    <TableLayout
                        android:id="@+id/tableLayout1"
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content" >

                        <TableRow
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="bottom">

                            <TextView
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:text="@string/display_density"/>

                            <TextView
                                android:id="@+id/textview_display_density"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:text="@string/display_density"/>
                        </TableRow>

                        <TableRow
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="bottom">

                            <TextView
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:text="@string/display_density_dpi"/>

                            <TextView
                                android:id="@+id/textview_display_density_dpi"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:text="@string/display_density_dpi"/>
                        </TableRow>

                        <TableRow
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="bottom">

                            <TextView
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:text="@string/display_density_scaled"/>

                            <TextView
                                android:id="@+id/textview_display_density_scaled"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:text="@string/display_density_scaled"/>
                        </TableRow>

                        <TableRow
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="bottom">


                            <TextView
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:text="@string/display_xdpi"/>

                            <TextView
                                android:id="@+id/textview_display_xdpi"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:text="@string/display_xdpi"/>
                        </TableRow>

                        <TableRow
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="bottom">

                            <TextView
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:text="@string/display_ydpi"/>

                            <TextView
                                android:id="@+id/textview_display_ydpi"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:text="@string/display_ydpi"/>
                        </TableRow>

                        <TableRow
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="bottom">

                            <TextView
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_marginTop="20dp"
                                android:textStyle="bold"
                                android:text="@string/display_density_reference"/>

                        </TableRow>

                        <TableRow
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="bottom">

                            <TextView
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_marginRight="25dp"
                                android:text="@string/display_density_default"/>

                            <TextView
                                android:id="@+id/textview_display_density_default"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:text="@string/display_density_default"/>
                        </TableRow>

                        <TableRow
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="bottom">


                            <TextView
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_marginRight="25dp"
                                android:text="@string/display_density_low"/>

                            <TextView
                                android:id="@+id/textview_display_density_low"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:text="@string/display_density_low"/>
                        </TableRow>
                        <TableRow
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="bottom">


                            <TextView
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_marginRight="25dp"
                                android:text="@string/display_density_medium"/>

                            <TextView
                                android:id="@+id/textview_display_density_medium"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:text="@string/display_density_medium"/>
                        </TableRow>
                        <TableRow
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="bottom">


                            <TextView
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_marginRight="25dp"
                                android:text="@string/display_density_high"/>

                            <TextView
                                android:id="@+id/textview_display_density_high"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:text="@string/display_density_high"/>
                        </TableRow>
                    </TableLayout>
                </LinearLayout>
            </LinearLayout>

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="2dp">

                <LinearLayout
                    android:orientation="vertical"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@android:drawable/dialog_holo_light_frame"
                    android:padding="15dp" >

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textStyle="bold"
                        android:text="@string/display_screen"/>

                    <TableLayout
                        android:id="@+id/tableLayout2"
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content" >

                        <TableRow
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="bottom">

                            <TextView
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_marginRight="10dp"
                                android:text="@string/display_height"/>

                            <TextView
                                android:id="@+id/textview_display_height"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:text="@string/display_height"/>
                        </TableRow>

                        <TableRow
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="bottom">


                            <TextView
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:text="@string/display_width"/>

                            <TextView
                                android:id="@+id/textview_display_width"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:text="@string/display_width"/>
                        </TableRow>
                    </TableLayout>
                </LinearLayout>
            </LinearLayout>
        </LinearLayout>
    </ScrollView>
</FrameLayout>
