<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" tools:context="com.fourreau.systemdroidmonitor.ui.fragment.BatteryFragment">
    <ScrollView
        android:id="@+id/scrollView"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent">

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="2dp">

                <LinearLayout
                    android:orientation="vertical"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@android:drawable/dialog_holo_light_frame"
                    android:padding="15dp" >

                    <TableLayout
                        android:id="@+id/tableLayout1"
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content" >

                        <TableRow
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="bottom">

                            <TextView
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:text="@string/battery_health"/>

                            <TextView
                                android:id="@+id/textview_battery_health"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:text="@string/battery_health"/>
                        </TableRow>

                        <TableRow
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="bottom">


                            <TextView
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:text="@string/battery_icon_small"/>

                            <TextView
                                android:id="@+id/textview_battery_icon_small"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:text="@string/battery_icon_small"/>
                        </TableRow>

                        <TableRow
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="bottom">


                            <TextView
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_marginRight="15dp"
                                android:text="@string/battery_level"/>

                            <TextView
                                android:id="@+id/textview_battery_level"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:text="@string/battery_level"/>
                        </TableRow>

                        <TableRow
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="bottom">


                            <TextView
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:text="@string/battery_plugged"/>

                            <TextView
                                android:id="@+id/textview_battery_plugged"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:text="@string/battery_plugged"/>
                        </TableRow>

                        <TableRow
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="bottom">


                            <TextView
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:text="@string/battery_present"/>

                            <TextView
                                android:id="@+id/textview_battery_present"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:text="@string/battery_present"/>
                        </TableRow>

                        <TableRow
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="bottom">


                            <TextView
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:text="@string/battery_technology"/>

                            <TextView
                                android:id="@+id/textview_battery_technology"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:text="@string/battery_technology"/>
                        </TableRow>

                        <TableRow
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="bottom">


                            <TextView
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:text="@string/battery_temperature"/>

                            <TextView
                                android:id="@+id/textview_battery_temperature"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:text="@string/battery_temperature"/>
                        </TableRow>

                        <TableRow
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="bottom">


                            <TextView
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_marginRight="25dp"
                                android:text="@string/battery_voltage"/>

                            <TextView
                                android:id="@+id/textview_battery_voltage"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:text="@string/battery_voltage"/>
                        </TableRow>
                    </TableLayout>
                </LinearLayout>
            </LinearLayout>
        </LinearLayout>
    </ScrollView>
</FrameLayout>
