<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" tools:context="com.fourreau.systemdroidmonitor.ui.fragment.SystemFragment">

    <ScrollView
        android:id="@+id/scrollView"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent">

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="2dp">

                <LinearLayout
                    android:orientation="vertical"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@android:drawable/dialog_holo_light_frame"
                    android:padding="15dp" >

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textStyle="bold"
                        android:text="@string/system_wifi_label"/>

                    <TableLayout
                        android:id="@+id/tableLayout1"
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content" >

                        <TableRow
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="bottom">

                            <TextView
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_marginRight="15dp"
                                android:text="@string/system_wifi_mac"/>

                            <TextView
                                android:id="@+id/textview_system_wifi_mac"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:text="@string/system_wifi_mac"/>
                        </TableRow>

                        <TableRow
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="bottom">


                            <TextView
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_marginRight="20dp"
                                android:text="@string/system_wifi_ipv4"/>

                            <TextView
                                android:id="@+id/textview_system_wifi_ipv4"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:text="@string/system_wifi_ipv4"/>
                        </TableRow>

                        <TableRow
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="bottom">


                            <TextView
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:text="@string/system_wifi_ipv6"/>

                            <TextView
                                android:id="@+id/textview_system_wifi_ipv6"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:text="@string/system_wifi_ipv6"/>
                        </TableRow>
                    </TableLayout>
                </LinearLayout>
            </LinearLayout>
            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="2dp">

                <LinearLayout
                    android:orientation="vertical"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@android:drawable/dialog_holo_light_frame"
                    android:padding="15dp" >

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textStyle="bold"
                        android:text="@string/system_wifi_cpu_label"/>

                    <TextView
                        android:id="@+id/textview_system_wifi_cpu"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/system_wifi_cpu_label"/>
                </LinearLayout>
            </LinearLayout>
        </LinearLayout>
    </ScrollView>
</FrameLayout>
